--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -21,10 +21,10 @@ Have a new set of top posts to focus on
 * (done) start post #1016 on threejs-tetrahedron
 * (done) edit threejs-cone - link to new threejs-tetrahedron post
 * (done) edit threejs-cylinder - link to new threejs-tetrahedron post
+* (done) vgbp: threejs-tetrahedron - video1 done
+* (done) vgbp: threejs-tetrahedron - video1 uploaded and embed
 <!-- edit/new -->
 <!-- videoground-blog-posts -->
-* () vgbp: threejs-tetrahedron - video1 done
-* () vgbp: threejs-tetrahedron - video1 uploaded and embed
 <!-- Beta World -->
 * () template5: make sample alphas part of the stack
 * () start first guy video
