--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -16,8 +16,8 @@ Have a new set of top posts to focus on
 ### () - SAT 12/02/2022
 <!-- edit/new -->
 * (done) edit: threejs-object3d-layers - proof read opening
-* () forpost: threejs-object3d-layers - start for post folder
-* () edit: threejs-object3d-layers - proof read / expand getting started section
+* (done) forpost: threejs-object3d-layers - start for post folder
+* (done) edit: threejs-object3d-layers - proof read / expand getting started section
 
 * () edit: threejs-object3d-scale - 
 
