--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -14,11 +14,11 @@ Have a new set of top posts to focus on
 ## () - WEEK 1 - THU 12/01/2022 - SAT 12/03/2022
 
 ### () - SAT 12/02/2022
-<!-- edit/new -->
 * (done) edit: threejs-object3d-layers - proof read opening
 * (done) forpost: threejs-object3d-layers - start for post folder
 * (done) edit: threejs-object3d-layers - proof read / expand getting started section
-
+* (done) vgbw: start first guy video
+<!-- edit/new -->
 * () edit: threejs-object3d-scale - 
 
 ### () - FRI 12/02/2022
@@ -27,11 +27,6 @@ Have a new set of top posts to focus on
 * (done) edit threejs-cylinder - link to new threejs-tetrahedron post
 * (done) vgbp: threejs-tetrahedron - video1 done
 * (done) vgbp: threejs-tetrahedron - video1 uploaded and embed
-<!-- edit/new -->
-<!-- videoground-blog-posts -->
-<!-- Beta World -->
-* () template5: make sample alphas part of the stack
-* () start first guy video
 
 ### () - THU 12/01/2022
 * (done) edit: threejs-webglrenderer - proof read opening, and getting started
