--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -2,11 +2,56 @@
 
 THREEJS, VIDEOGROUND-BLOG_POSTS
 
-Have a new set of top posts to focus on
+Start over again by focusing hard on a set top 10 posts on threejs. This time I will be doing so by impressions. Another change that I think I should do is to not take a whole week for a single post, but rather do a day my day thing. 
+
+```
+TOP POSTS BY IMPRESSIONS  12/05/2022 - Last 3 Months
+Top pages                                       Clicks       Impressions
+threejs-object3d-position                        1,577            21,256    <= DAY 1 
+threejs-materials-transparent                      346            13,335    <= DAY 2
+threejs-object3d-lookat                            683            10,729    <= ...
+threejs-object3d-scale                             428            10,559
+threejs-box3                                       298            10,421
+threejs-buffer-geometry-rotation                   181             9,688
+threejs-buffer-geometry-attributes-position        596             9,192
+threejs-sphere                                     331             8,896
+threejs-vector3                                    223             8,516
+threejs-camera-perspective                         194             8,181
+```
 
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
+<!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 12/11/2022 - SAT 12/17/2022
+
+
+<!-------- ----------
+-- WEEK 2
+---------- --------->
+## () - WEEK 2 - SUN 12/04/2022 - SAT 12/10/2022
+
+### () - SAT 12/04/2022
+
+### () - FRI 12/04/2022
+
+### () - THU 12/04/2022
+
+### () - WED 12/04/2022
+
+### () - TUE 12/04/2022
+<!-- new/edit -->
+* () edit : threejs-materials-transparent
+
+### () - MON 12/04/2022
+<!-- new/edit -->
+* () edit : threejs-object3d-position - 
+
+### () - SUN 12/04/2022
+* (done) forpost: threejs-fly-controls - start for post folder and make new basic demos
+* (done) edit: threejs-fly-controls - link to for post, write about new demos
 
 <!-------- ----------
 -- WEEK 1
@@ -18,8 +63,6 @@ Have a new set of top posts to focus on
 * (done) forpost: threejs-object3d-layers - start for post folder
 * (done) edit: threejs-object3d-layers - proof read / expand getting started section
 * (done) vgbw: start first guy video
-<!-- edit/new -->
-* () edit: threejs-object3d-scale - 
 
 ### () - FRI 12/02/2022
 * (done) start post #1016 on threejs-tetrahedron
