--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -46,8 +46,9 @@ threejs-camera-perspective                         194             8,181
 * () edit : threejs-materials-transparent
 
 ### () - MON 12/04/2022
+* (done) edit : threejs-object3d-position - expand on 4.5 example
 <!-- new/edit -->
-* () edit : threejs-object3d-position - 
+
 
 ### () - SUN 12/04/2022
 * (done) forpost: threejs-fly-controls - start for post folder and make new basic demos
