--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -47,6 +47,7 @@ threejs-camera-perspective                         194             8,181
 
 ### () - MON 12/04/2022
 * (done) edit : threejs-object3d-position - expand on 4.5 example
+* (done) edit : threejs-object3d-position - new geometry section
 <!-- new/edit -->
 
 
