--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -36,6 +36,7 @@ threejs-camera-perspective                         194             8,181
 ### () - SAT 12/04/2022
 
 ### () - FRI 12/04/2022
+* () start post #1017 on threejs-buffer-geometry-index
 
 ### () - THU 12/04/2022
 
@@ -44,12 +45,16 @@ threejs-camera-perspective                         194             8,181
 ### () - TUE 12/04/2022
 <!-- new/edit -->
 * () edit : threejs-materials-transparent
+* () edit : threejs-orbit-controls - 
+* () edit : threejs-line-fat-width - see about updating source code exmaples
+
 
 ### () - MON 12/04/2022
 * (done) edit : threejs-object3d-position - expand on 4.5 example
 * (done) edit : threejs-object3d-position - new geometry section
+* (done) edit : threejs-line-fat-width - link to for post
 <!-- new/edit -->
-
+* () start r146 buffer-geometry-index demo folder
 
 ### () - SUN 12/04/2022
 * (done) forpost: threejs-fly-controls - start for post folder and make new basic demos
