--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -53,8 +53,11 @@ threejs-camera-perspective                         194             8,181
 * (done) edit : threejs-object3d-position - expand on 4.5 example
 * (done) edit : threejs-object3d-position - new geometry section
 * (done) edit : threejs-line-fat-width - link to for post
+* (done) edit : threejs-line-fat-width - new r140 example started
 <!-- new/edit -->
 * () start r146 buffer-geometry-index demo folder
+<!-- videoground-blog-posts -->
+* () start a threejs-line-fat-width folder
 
 ### () - SUN 12/04/2022
 * (done) forpost: threejs-fly-controls - start for post folder and make new basic demos
