--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -36,28 +36,33 @@ threejs-camera-perspective                         194             8,181
 ### () - SAT 12/04/2022
 
 ### () - FRI 12/04/2022
+<!-- new/edit -->
+* () forpost: threejs-buffer-geometry-index -
 * () start post #1017 on threejs-buffer-geometry-index
 
 ### () - THU 12/04/2022
+<!-- new/edit -->
+* () forpost: threejs-buffer-geometry-index -
 
 ### () - WED 12/04/2022
+<!-- new/edit -->
+* () forpost: threejs-buffer-geometry-index -
+* () edit: threejs-object3d-lookat
 
 ### () - TUE 12/04/2022
 <!-- new/edit -->
-* () edit : threejs-materials-transparent
+* () edit : threejs-materials-transparent - 
 * () edit : threejs-orbit-controls - 
-* () edit : threejs-line-fat-width - see about updating source code exmaples
-
+* () forpost: start a threejs-buffer-geometry-index for post folder
+<!-- videoground-blog-posts -->
+* () start a threejs-line-fat-width folder
 
 ### () - MON 12/04/2022
 * (done) edit : threejs-object3d-position - expand on 4.5 example
 * (done) edit : threejs-object3d-position - new geometry section
 * (done) edit : threejs-line-fat-width - link to for post
 * (done) edit : threejs-line-fat-width - new r140 example started
-<!-- new/edit -->
-* () start r146 buffer-geometry-index demo folder
-<!-- videoground-blog-posts -->
-* () start a threejs-line-fat-width folder
+* (done) start r146 buffer-geometry-index demo folder
 
 ### () - SUN 12/04/2022
 * (done) forpost: threejs-fly-controls - start for post folder and make new basic demos
