--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -50,11 +50,14 @@ threejs-camera-perspective                         194             8,181
 * () edit: threejs-object3d-lookat
 
 ### () - TUE 12/04/2022
+* (done) edit : threejs-line-fat-width - new r140 color example
 <!-- videoground-blog-posts -->
 * () start a threejs-line-fat-width folder
 <!-- new/edit -->
+* () edit : threejs-orbit-controls - proof read
+* () edit : threejs-examples-clock-basic - proof read
+
 * () edit : threejs-materials-transparent - 
-* () edit : threejs-orbit-controls - 
 * () forpost: start a threejs-buffer-geometry-index for post folder
 
 ### () - MON 12/04/2022
