--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -51,11 +51,11 @@ threejs-camera-perspective                         194             8,181
 
 ### () - TUE 12/04/2022
 * (done) edit : threejs-line-fat-width - new r140 color example
+* (done) edit : threejs-orbit-controls - proof read opening
 <!-- videoground-blog-posts -->
 * () start a threejs-line-fat-width folder
 <!-- new/edit -->
-* () edit : threejs-orbit-controls - proof read
-* () edit : threejs-examples-clock-basic - proof read
+* () edit : threejs-examples-clock-basic - proof read opening
 
 * () edit : threejs-materials-transparent - 
 * () forpost: start a threejs-buffer-geometry-index for post folder
