--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -52,11 +52,11 @@ threejs-camera-perspective                         194             8,181
 ### () - TUE 12/04/2022
 * (done) edit : threejs-line-fat-width - new r140 color example
 * (done) edit : threejs-orbit-controls - proof read opening
+* (done) edit : threejs-examples-clock-basic - proof read opening
 <!-- videoground-blog-posts -->
 * () start a threejs-line-fat-width folder
 <!-- new/edit -->
-* () edit : threejs-examples-clock-basic - proof read opening
-
+* () forpost : threejs-examples-clock-basic - start for post folder, link to it in post
 * () edit : threejs-materials-transparent - 
 * () forpost: start a threejs-buffer-geometry-index for post folder
 
