--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -49,15 +49,16 @@ threejs-camera-perspective                         194             8,181
 * () forpost: threejs-buffer-geometry-index -
 * () edit: threejs-object3d-lookat
 
+
 ### () - TUE 12/04/2022
 * (done) edit : threejs-line-fat-width - new r140 color example
 * (done) edit : threejs-orbit-controls - proof read opening
 * (done) edit : threejs-examples-clock-basic - proof read opening
+* (done) forpost : threejs-examples-clock-basic - start for post folder, link to it in post
 <!-- videoground-blog-posts -->
 * () start a threejs-line-fat-width folder
 <!-- new/edit -->
-* () forpost : threejs-examples-clock-basic - start for post folder, link to it in post
-* () edit : threejs-materials-transparent - 
+* () edit : threejs-materials-transparent - proof read
 * () forpost: start a threejs-buffer-geometry-index for post folder
 
 ### () - MON 12/04/2022
