--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -55,10 +55,10 @@ threejs-camera-perspective                         194             8,181
 * (done) edit : threejs-orbit-controls - proof read opening
 * (done) edit : threejs-examples-clock-basic - proof read opening
 * (done) forpost : threejs-examples-clock-basic - start for post folder, link to it in post
+* (done) edit : threejs-materials-transparent - proof read opening
 <!-- videoground-blog-posts -->
 * () start a threejs-line-fat-width folder
 <!-- new/edit -->
-* () edit : threejs-materials-transparent - proof read
 * () forpost: start a threejs-buffer-geometry-index for post folder
 
 ### () - MON 12/04/2022
