--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -57,9 +57,12 @@ threejs-camera-perspective                         194             8,181
 * (done) forpost : threejs-examples-clock-basic - start for post folder, link to it in post
 * (done) edit : threejs-materials-transparent - proof read opening
 <!-- videoground-blog-posts -->
+* () forpost: start a loop section for the post and what I want for video1
 * () start a threejs-line-fat-width folder
 <!-- new/edit -->
 * () forpost: start a threejs-buffer-geometry-index for post folder
+<!-- videoground-beta-world -->
+* () start a new template file for the count down videos idea
 
 ### () - MON 12/04/2022
 * (done) edit : threejs-object3d-position - expand on 4.5 example
