--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -46,7 +46,7 @@ threejs-camera-perspective                         194             8,181
 
 ### () - WED 12/04/2022
 <!-- new/edit -->
-* () forpost: threejs-buffer-geometry-index -
+* () forpost: threejs-buffer-geometry-index - more demos ( at least 3 )
 * () edit: threejs-object3d-lookat
 
 
