--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -46,9 +46,13 @@ threejs-camera-perspective                         194             8,181
 
 ### () - WED 12/04/2022
 <!-- new/edit -->
-* () forpost: threejs-buffer-geometry-index - more demos ( at least 3 )
+* () forpost: start a threejs-buffer-geometry-index for post folder
 * () edit: threejs-object3d-lookat
-
+* () edit: threejs-line-fat-width - write about video1 example
+<!-- videoground-blog-posts -->
+* () start a threejs-line-fat-width folder
+<!-- videoground-beta-world -->
+* () start a new template file for the count down videos idea
 
 ### () - TUE 12/04/2022
 * (done) edit : threejs-line-fat-width - new r140 color example
@@ -56,13 +60,7 @@ threejs-camera-perspective                         194             8,181
 * (done) edit : threejs-examples-clock-basic - proof read opening
 * (done) forpost : threejs-examples-clock-basic - start for post folder, link to it in post
 * (done) edit : threejs-materials-transparent - proof read opening
-<!-- videoground-blog-posts -->
-* () forpost: start a loop section for the post and what I want for video1
-* () start a threejs-line-fat-width folder
-<!-- new/edit -->
-* () forpost: start a threejs-buffer-geometry-index for post folder
-<!-- videoground-beta-world -->
-* () start a new template file for the count down videos idea
+* (done) forpost: start a loop section for the post and what I want for video1
 
 ### () - MON 12/04/2022
 * (done) edit : threejs-object3d-position - expand on 4.5 example
