--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -41,14 +41,19 @@ threejs-camera-perspective                         194             8,181
 * () start post #1017 on threejs-buffer-geometry-index
 
 ### () - THU 12/04/2022
+<!-- for post -->
+* () forpost: threejs-buffer-geometry-index - more examples
 <!-- new/edit -->
-* () forpost: threejs-buffer-geometry-index -
+
 
 ### () - WED 12/04/2022
+* (done) forpost: threejs-line-fat-width - loop examples
+* (done) forpost: start a threejs-buffer-geometry-index for post folder
 <!-- new/edit -->
-* () forpost: start a threejs-buffer-geometry-index for post folder
-* () edit: threejs-object3d-lookat
+* () edit: threejs-object3d-lookat - proof read
+
 * () edit: threejs-line-fat-width - write about video1 example
+
 <!-- videoground-blog-posts -->
 * () start a threejs-line-fat-width folder
 <!-- videoground-beta-world -->
