--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -49,9 +49,9 @@ threejs-camera-perspective                         194             8,181
 ### () - WED 12/04/2022
 * (done) forpost: threejs-line-fat-width - loop examples
 * (done) forpost: start a threejs-buffer-geometry-index for post folder
+* (done) edit: threejs-object3d-lookat - proof read opening
+* (done) edit: threejs-light-prope - proof read opening, start for post folder
 <!-- new/edit -->
-* () edit: threejs-object3d-lookat - proof read
-
 * () edit: threejs-line-fat-width - write about video1 example
 
 <!-- videoground-blog-posts -->
