--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -44,6 +44,7 @@ threejs-camera-perspective                         194             8,181
 <!-- for post -->
 * () forpost: threejs-buffer-geometry-index - more examples
 <!-- new/edit -->
+* () edit: threejs-standard-material - 
 
 
 ### () - WED 12/04/2022
@@ -53,7 +54,6 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-light-prope - proof read opening, start for post folder
 <!-- new/edit -->
 * () edit: threejs-line-fat-width - write about video1 example
-
 <!-- videoground-blog-posts -->
 * () start a threejs-line-fat-width folder
 <!-- videoground-beta-world -->
