--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -45,19 +45,16 @@ threejs-camera-perspective                         194             8,181
 * () forpost: threejs-buffer-geometry-index - more examples
 <!-- new/edit -->
 * () edit: threejs-standard-material - 
-
+<!-- videoground-beta-world -->
+* () start a new template file for the count down videos idea
 
 ### () - WED 12/04/2022
 * (done) forpost: threejs-line-fat-width - loop examples
 * (done) forpost: start a threejs-buffer-geometry-index for post folder
 * (done) edit: threejs-object3d-lookat - proof read opening
 * (done) edit: threejs-light-prope - proof read opening, start for post folder
-<!-- new/edit -->
-* () edit: threejs-line-fat-width - write about video1 example
-<!-- videoground-blog-posts -->
-* () start a threejs-line-fat-width folder
-<!-- videoground-beta-world -->
-* () start a new template file for the count down videos idea
+* (done) edit: threejs-line-fat-width - write about video1 example
+* (done) start a threejs-line-fat-width folder
 
 ### () - TUE 12/04/2022
 * (done) edit : threejs-line-fat-width - new r140 color example
