--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -41,10 +41,14 @@ threejs-camera-perspective                         194             8,181
 * () start post #1017 on threejs-buffer-geometry-index
 
 ### () - THU 12/04/2022
+* (done) edit: threejs-standard-material - proof read opening and intro
+* (done) edit: threejs-standard-material - proof read #1, #2, #3, conclusion
 <!-- for post -->
 * () forpost: threejs-buffer-geometry-index - more examples
+* () forpost: threejs-standard-material - expand basic section
 <!-- new/edit -->
-* () edit: threejs-standard-material - 
+* () threejs-examples-plane-mutate - proof read opening and intro
+
 <!-- videoground-beta-world -->
 * () start a new template file for the count down videos idea
 
