--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -43,11 +43,12 @@ threejs-camera-perspective                         194             8,181
 ### () - THU 12/04/2022
 * (done) edit: threejs-standard-material - proof read opening and intro
 * (done) edit: threejs-standard-material - proof read #1, #2, #3, conclusion
+* (done) threejs-examples-plane-mutate - proof read intro
 <!-- for post -->
 * () forpost: threejs-buffer-geometry-index - more examples
 * () forpost: threejs-standard-material - expand basic section
 <!-- new/edit -->
-* () threejs-examples-plane-mutate - proof read opening and intro
+
 
 <!-- videoground-beta-world -->
 * () start a new template file for the count down videos idea
