--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -44,14 +44,13 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-standard-material - proof read opening and intro
 * (done) edit: threejs-standard-material - proof read #1, #2, #3, conclusion
 * (done) threejs-examples-plane-mutate - proof read intro
-
+* (done) forpost: threejs-object3d-scale - video1 loop example done
+<!-- new/edit -->
+* () edit: threejs-object3d-scale - write about video1 example
+* () edit: threejs-line-fat-width - video embed
 <!-- for post -->
 * () forpost: threejs-buffer-geometry-index - more examples
 * () forpost: threejs-standard-material - expand basic section
-<!-- new/edit -->
-* () edit: threejs-line-fat-width - video embed
-* () edit: threejs-object3d-scale - 
-
 <!-- videoground-beta-world -->
 * () start a new template file for the count down videos idea
 
