--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -45,8 +45,8 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-standard-material - proof read #1, #2, #3, conclusion
 * (done) threejs-examples-plane-mutate - proof read intro
 * (done) forpost: threejs-object3d-scale - video1 loop example done
+* (done) edit: threejs-line-fat-width - video embed
 <!-- new/edit -->
-* () edit: threejs-line-fat-width - video embed
 * () edit: threejs-object3d-scale - write about video1 example
 <!-- for post -->
 * () forpost: threejs-buffer-geometry-index - more examples
