--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -46,8 +46,7 @@ threejs-camera-perspective                         194             8,181
 * (done) threejs-examples-plane-mutate - proof read intro
 * (done) forpost: threejs-object3d-scale - video1 loop example done
 * (done) edit: threejs-line-fat-width - video embed
-<!-- new/edit -->
-* () edit: threejs-object3d-scale - write about video1 example
+* (done) edit: threejs-object3d-scale - write about video1 example
 <!-- for post -->
 * () forpost: threejs-buffer-geometry-index - more examples
 * () forpost: threejs-standard-material - expand basic section
