--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -36,9 +36,12 @@ threejs-camera-perspective                         194             8,181
 ### () - SAT 12/04/2022
 
 ### () - FRI 12/04/2022
+<!-- for post -->
+* () forpost: threejs-standard-material - expand basic section
 <!-- new/edit -->
-* () forpost: threejs-buffer-geometry-index -
 * () start post #1017 on threejs-buffer-geometry-index
+* () edit: threejs-standard-material - write about new basic examples
+* () edit: threejs-box3 -
 
 ### () - THU 12/04/2022
 * (done) edit: threejs-standard-material - proof read opening and intro
@@ -47,9 +50,7 @@ threejs-camera-perspective                         194             8,181
 * (done) forpost: threejs-object3d-scale - video1 loop example done
 * (done) edit: threejs-line-fat-width - video embed
 * (done) edit: threejs-object3d-scale - write about video1 example
-<!-- for post -->
-* () forpost: threejs-buffer-geometry-index - more examples
-* () forpost: threejs-standard-material - expand basic section
+* (done) forpost: threejs-buffer-geometry-index - more examples
 <!-- videoground-beta-world -->
 * () start a new template file for the count down videos idea
 
