--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -36,12 +36,18 @@ threejs-camera-perspective                         194             8,181
 ### () - SAT 12/04/2022
 
 ### () - FRI 12/04/2022
-<!-- for post -->
-* () forpost: threejs-standard-material - expand basic section
+* (done) start post #1017 on threejs-buffer-geometry-index
 <!-- new/edit -->
-* () start post #1017 on threejs-buffer-geometry-index
+* () edit: threejs-buffer-geometry-index - write sections for all current demos
+* () edit: threejs-buffer-geometry-index - write getting started
+* () edit: threejs-buffer-geometry-index - write conclusion
+
 * () edit: threejs-standard-material - write about new basic examples
 * () edit: threejs-box3 -
+<!-- for post -->
+* () forpost: threejs-standard-material - expand basic section
+<!-- videoground-beta-world -->
+* () work more on template 6
 
 ### () - THU 12/04/2022
 * (done) edit: threejs-standard-material - proof read opening and intro
@@ -51,8 +57,7 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-line-fat-width - video embed
 * (done) edit: threejs-object3d-scale - write about video1 example
 * (done) forpost: threejs-buffer-geometry-index - more examples
-<!-- videoground-beta-world -->
-* () start a new template file for the count down videos idea
+* (done) start a new template file for the count down videos idea
 
 ### () - WED 12/04/2022
 * (done) forpost: threejs-line-fat-width - loop examples
