--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -37,15 +37,15 @@ threejs-camera-perspective                         194             8,181
 
 ### () - FRI 12/04/2022
 * (done) start post #1017 on threejs-buffer-geometry-index
-<!-- new/edit -->
-* () edit: threejs-buffer-geometry-index - write sections for all current demos
-* () edit: threejs-buffer-geometry-index - write getting started
-* () edit: threejs-buffer-geometry-index - write conclusion
-
-* () edit: threejs-standard-material - write about new basic examples
-* () edit: threejs-box3 -
+* (done) edit: threejs-buffer-geometry-index - write sections for all current demos
+* (done) edit: threejs-buffer-geometry-index - write getting started
+* (done) edit: threejs-buffer-geometry-index - write conclusion
 <!-- for post -->
 * () forpost: threejs-standard-material - expand basic section
+* () forpost: threejs-box3 - 
+<!-- new/edit -->
+* () edit: threejs-standard-material - write about new basic examples
+* () edit: threejs-box3 -
 <!-- videoground-beta-world -->
 * () work more on template 6
 
