--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -40,8 +40,8 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-buffer-geometry-index - write sections for all current demos
 * (done) edit: threejs-buffer-geometry-index - write getting started
 * (done) edit: threejs-buffer-geometry-index - write conclusion
+* (done) forpost: threejs-standard-material - expand basic section
 <!-- for post -->
-* () forpost: threejs-standard-material - expand basic section
 * () forpost: threejs-box3 - 
 <!-- new/edit -->
 * () edit: threejs-standard-material - write about new basic examples
