--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -41,10 +41,10 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-buffer-geometry-index - write getting started
 * (done) edit: threejs-buffer-geometry-index - write conclusion
 * (done) forpost: threejs-standard-material - expand basic section
+* (done) edit: threejs-standard-material - write about new basic examples
 <!-- for post -->
 * () forpost: threejs-box3 - 
 <!-- new/edit -->
-* () edit: threejs-standard-material - write about new basic examples
 * () edit: threejs-box3 -
 <!-- videoground-beta-world -->
 * () work more on template 6
