--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -42,10 +42,8 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-buffer-geometry-index - write conclusion
 * (done) forpost: threejs-standard-material - expand basic section
 * (done) edit: threejs-standard-material - write about new basic examples
-<!-- for post -->
-* () forpost: threejs-box3 - 
-<!-- new/edit -->
-* () edit: threejs-box3 -
+* (done) forpost: threejs-box3 - new intersetcs box method example
+* (done) edit: threejs-box3 - write abot new basic example
 <!-- videoground-beta-world -->
 * () work more on template 6
 
