--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -34,6 +34,10 @@ threejs-camera-perspective                         194             8,181
 ## () - WEEK 2 - SUN 12/04/2022 - SAT 12/10/2022
 
 ### () - SAT 12/04/2022
+<!-- videoground-blog-posts -->
+* () threejs-buffer-geometry-index - start video folder based on video1 example in for post folder
+<!-- videoground-beta-world -->
+* () work more on template 6
 
 ### () - FRI 12/04/2022
 * (done) start post #1017 on threejs-buffer-geometry-index
@@ -44,8 +48,6 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-standard-material - write about new basic examples
 * (done) forpost: threejs-box3 - new intersetcs box method example
 * (done) edit: threejs-box3 - write abot new basic example
-<!-- videoground-beta-world -->
-* () work more on template 6
 
 ### () - THU 12/04/2022
 * (done) edit: threejs-standard-material - proof read opening and intro
