--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -34,8 +34,7 @@ threejs-camera-perspective                         194             8,181
 ## () - WEEK 2 - SUN 12/04/2022 - SAT 12/10/2022
 
 ### () - SAT 12/04/2022
-<!-- videoground-blog-posts -->
-* () threejs-buffer-geometry-index - start video folder based on video1 example in for post folder
+* (done) threejs-buffer-geometry-index - start video folder based on video1 example in for post folder
 <!-- videoground-beta-world -->
 * () work more on template 6
 
