--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -27,6 +27,22 @@ threejs-camera-perspective                         194             8,181
 ---------- --------->
 ## () - WEEK 3 - SUN 12/11/2022 - SAT 12/17/2022
 
+### () - SAT 12/17/2022
+
+### () - FRI 12/16/2022
+* () start post #1018 on threejs-
+
+### () - THU 12/15/2022
+
+### () - WED 12/14/2022
+
+### () - TUE 12/13/2022
+
+### () - MON 12/12/2022
+
+### () - SUN 12/11/2022
+<!-- videoground-beta-world -->
+* () work more on template 6
 
 <!-------- ----------
 -- WEEK 2
@@ -35,8 +51,6 @@ threejs-camera-perspective                         194             8,181
 
 ### () - SAT 12/04/2022
 * (done) threejs-buffer-geometry-index - start video folder based on video1 example in for post folder
-<!-- videoground-beta-world -->
-* () work more on template 6
 
 ### () - FRI 12/04/2022
 * (done) start post #1017 on threejs-buffer-geometry-index
