--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -39,10 +39,24 @@ threejs-camera-perspective                         194             8,181
 ### () - TUE 12/13/2022
 
 ### () - MON 12/12/2022
+* (done) edit : threejs-examples-weird-walk proof read all intros
+<!-- forpost -->
+* () forpost: threejs-examples-werid-walk-one : update for post folder to main js plus demos pattern
+* () forpost: threejs-examples-werid-walk-two : update for post folder to main js plus demos pattern
+* () forpost: threejs-examples-werid-walk-three : update for post folder to main js plus demos pattern
 
-### () - SUN 12/11/2022
+* () forpost: threejs-examples-werid-walk-one : new demo for r0
+* () forpost: threejs-examples-werid-walk-one : start r1 of the module and at least one demo
+
+<!-- edit -->
+* () edit: threejs-examples-werid-walk-one - proof read full post
+* () edit: threejs-examples-werid-walk-one - write about new code
+
 <!-- videoground-beta-world -->
 * () work more on template 6
+
+### () - SUN 12/11/2022
+* (done) edit: threejs-basic-material
 
 <!-------- ----------
 -- WEEK 2
