--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -40,10 +40,10 @@ threejs-camera-perspective                         194             8,181
 
 ### () - MON 12/12/2022
 * (done) edit : threejs-examples-weird-walk proof read all intros
+* (done) forpost: threejs-examples-werid-walk-one : update for post folder to main js plus demos pattern
+* (done) forpost: threejs-examples-werid-walk-two : update for post folder to main js plus demos pattern
+* (done) forpost: threejs-examples-werid-walk-three : update for post folder to main js plus demos pattern
 <!-- forpost -->
-* () forpost: threejs-examples-werid-walk-one : update for post folder to main js plus demos pattern
-* () forpost: threejs-examples-werid-walk-two : update for post folder to main js plus demos pattern
-* () forpost: threejs-examples-werid-walk-three : update for post folder to main js plus demos pattern
 
 * () forpost: threejs-examples-werid-walk-one : new demo for r0
 * () forpost: threejs-examples-werid-walk-one : start r1 of the module and at least one demo
