--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -37,21 +37,26 @@ threejs-camera-perspective                         194             8,181
 ### () - WED 12/14/2022
 
 ### () - TUE 12/13/2022
+<!-- for post -->
+* () forpost: threejs-examples-werid-walk-one : new demo for r0
+* () forpost: threejs-examples-werid-walk-one : start r1 of the module and at least one demo
+<!-- edit -->
+* () edit: threejs-examples-werid-walk-one - write about new code
+<!-- videoground-blog-posts -->
+* () video2 for threejs-examples-werid-walk-one
 
 ### () - MON 12/12/2022
 * (done) edit : threejs-examples-weird-walk proof read all intros
 * (done) forpost: threejs-examples-werid-walk-one : update for post folder to main js plus demos pattern
 * (done) forpost: threejs-examples-werid-walk-two : update for post folder to main js plus demos pattern
 * (done) forpost: threejs-examples-werid-walk-three : update for post folder to main js plus demos pattern
-<!-- forpost -->
-
-* () forpost: threejs-examples-werid-walk-one : new demo for r0
-* () forpost: threejs-examples-werid-walk-one : start r1 of the module and at least one demo
-
 <!-- edit -->
 * () edit: threejs-examples-werid-walk-one - proof read full post
-* () edit: threejs-examples-werid-walk-one - write about new code
+<!-- videoground-blog-posts -->
+* () video1 for threejs-examples-werid-walk-two
 
+<!-- forpost -->
+* () forpost: start at least one r146 demo for friday
 <!-- videoground-beta-world -->
 * () work more on template 6
 
