--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -50,8 +50,8 @@ threejs-camera-perspective                         194             8,181
 * (done) forpost: threejs-examples-werid-walk-one : update for post folder to main js plus demos pattern
 * (done) forpost: threejs-examples-werid-walk-two : update for post folder to main js plus demos pattern
 * (done) forpost: threejs-examples-werid-walk-three : update for post folder to main js plus demos pattern
+* (done) edit: threejs-examples-werid-walk-one - proof read full post
 <!-- edit -->
-* () edit: threejs-examples-werid-walk-one - proof read full post
 <!-- videoground-blog-posts -->
 * () video1 for threejs-examples-werid-walk-two
 
