--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -37,8 +37,8 @@ threejs-camera-perspective                         194             8,181
 ### () - WED 12/14/2022
 
 ### () - TUE 12/13/2022
+* (done) edit: threejs-examples-weird-walk-two - proof read full post
 <!-- edit -->
-* () edit: threejs-examples-weird-walk-two - proof read full post
 * () edit: threejs-examples-waves - proof read full post
 <!-- for post -->
 * () forpost: start at least one r146 demo for friday
