--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -38,9 +38,11 @@ threejs-camera-perspective                         194             8,181
 
 ### () - TUE 12/13/2022
 * (done) edit: threejs-examples-weird-walk-two - proof read full post
+* (done) edit: threejs-examples-waves - proof read full post
+* (done) forpost: new r1 of wave threejs example 
 <!-- edit -->
-* () edit: threejs-examples-waves - proof read full post
 <!-- for post -->
+
 * () forpost: start at least one r146 demo for friday
 <!-- videoground-beta-world -->
 * () work more on template 6 for count down videos
