--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -41,6 +41,7 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-examples-waves - proof read full post
 * (done) forpost: new r1 of wave threejs example 
 <!-- edit -->
+* () edit: threejs-examples-waves - write about new r1 of module
 <!-- for post -->
 
 * () forpost: start at least one r146 demo for friday
