--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -35,19 +35,22 @@ threejs-camera-perspective                         194             8,181
 ### () - THU 12/15/2022
 
 ### () - WED 12/14/2022
+<!-- for post -->
+* () forpost: threejs-buffer-geometry-index - update examples to use an array over buffer attribute
+* () forpost: start at least one r146 demo for friday
+<!-- edit-->
+* () edit: threejs-buffer-geometry-index - update source code
+* () edit: threejs-buffer-geometry-index - like to wave example
+<!-- videoground-beta-world -->
+* () work more on template 6 for count down videos
+<!-- videoground-blog-posts -->
+* () threejs-examples-waves - video2 on r1 of the module
 
 ### () - TUE 12/13/2022
 * (done) edit: threejs-examples-weird-walk-two - proof read full post
 * (done) edit: threejs-examples-waves - proof read full post
 * (done) forpost: new r1 of wave threejs example 
-<!-- edit -->
-* () edit: threejs-examples-waves - write about new r1 of module
-<!-- for post -->
-
-* () forpost: start at least one r146 demo for friday
-<!-- videoground-beta-world -->
-* () work more on template 6 for count down videos
-<!-- videoground-blog-posts -->
+* (done) edit: threejs-examples-waves - write about new r1 of module
 
 ### () - MON 12/12/2022
 * (done) edit : threejs-examples-weird-walk proof read all intros
