--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -35,14 +35,13 @@ threejs-camera-perspective                         194             8,181
 ### () - THU 12/15/2022
 
 ### () - WED 12/14/2022
+* (done) forpost: threejs-buffer-geometry-index - update examples to use an array over buffer attribute
+* (done) edit: threejs-buffer-geometry-index - update source code
 <!-- for post -->
-* () forpost: threejs-buffer-geometry-index - update examples to use an array over buffer attribute
 * () forpost: start at least one r146 demo for friday
 <!-- edit-->
-* () edit: threejs-buffer-geometry-index - update source code
-* () edit: threejs-buffer-geometry-index - like to wave example
 <!-- videoground-beta-world -->
-* () work more on template 6 for count down videos
+* () Work more on template 6 for count down videos
 <!-- videoground-blog-posts -->
 * () threejs-examples-waves - video2 on r1 of the module
 
