--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -38,9 +38,12 @@ threejs-camera-perspective                         194             8,181
 * (done) forpost: threejs-buffer-geometry-index - update examples to use an array over buffer attribute
 * (done) edit: threejs-buffer-geometry-index - update source code
 <!-- for post -->
+* (done) forpost: threejs-examples-weird-walk-one - r2 of module
 * () forpost: start at least one r146 demo for friday
 <!-- edit-->
+* () edit: threejs-examples-weird-walk-one - write about r2 of module
 <!-- videoground-beta-world -->
+* () new video template for weird-walk-one module
 * () Work more on template 6 for count down videos
 <!-- videoground-blog-posts -->
 * () threejs-examples-waves - video2 on r1 of the module
