--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -33,12 +33,10 @@ threejs-camera-perspective                         194             8,181
 * () start post #1018 on threejs-
 
 ### () - THU 12/15/2022
-
-### () - WED 12/14/2022
-* (done) forpost: threejs-buffer-geometry-index - update examples to use an array over buffer attribute
-* (done) edit: threejs-buffer-geometry-index - update source code
+<!-- morning edit -->
+* (done) edit: threejs-examples : fix header for example that is blank
+* () edit: threejs-examples : expand thin sections
 <!-- for post -->
-* (done) forpost: threejs-examples-weird-walk-one - r2 of module
 * () forpost: start at least one r146 demo for friday
 <!-- edit-->
 * () edit: threejs-examples-weird-walk-one - write about r2 of module
@@ -47,6 +45,12 @@ threejs-camera-perspective                         194             8,181
 * () Work more on template 6 for count down videos
 <!-- videoground-blog-posts -->
 * () threejs-examples-waves - video2 on r1 of the module
+
+
+### () - WED 12/14/2022
+* (done) forpost: threejs-buffer-geometry-index - update examples to use an array over buffer attribute
+* (done) edit: threejs-buffer-geometry-index - update source code
+* (done) forpost: threejs-examples-weird-walk-one - r2 of module
 
 ### () - TUE 12/13/2022
 * (done) edit: threejs-examples-weird-walk-two - proof read full post
