--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -38,6 +38,7 @@ threejs-camera-perspective                         194             8,181
 * () edit: threejs-examples : expand thin sections
 <!-- for post -->
 * () forpost: start at least one r146 demo for friday
+* () forpost: threejs-examples-lines-deterministic - check todo list, rename folders
 <!-- edit-->
 * () edit: threejs-examples-weird-walk-one - write about r2 of module
 <!-- videoground-beta-world -->
