--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -33,9 +33,8 @@ threejs-camera-perspective                         194             8,181
 * () start post #1018 on threejs-
 
 ### () - THU 12/15/2022
-<!-- morning edit -->
 * (done) edit: threejs-examples : fix header for example that is blank
-* () edit: threejs-examples : expand thin sections
+* (done) edit: threejs-examples : expand thin sections
 <!-- for post -->
 * () forpost: start at least one r146 demo for friday
 * () forpost: threejs-examples-lines-deterministic - check todo list, rename folders
