--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -30,14 +30,16 @@ threejs-camera-perspective                         194             8,181
 ### () - SAT 12/17/2022
 
 ### () - FRI 12/16/2022
-* () start post #1018 on threejs-
+* () start post #1018 on threejs-curve-geometry-from
+<!-- videoground-blog-posts -->
+* () video1 for threejs-curve-geometry-from
+
 
 ### () - THU 12/15/2022
 * (done) edit: threejs-examples : fix header for example that is blank
 * (done) edit: threejs-examples : expand thin sections
-<!-- for post -->
-* () forpost: start at least one r146 demo for friday
-* () forpost: threejs-examples-lines-deterministic - check todo list, rename folders
+* (done) forpost: start at least one r146 demo for friday
+* (done) forpost: new for post folder for threejs-curve-geometry-from
 <!-- edit-->
 * () edit: threejs-examples-weird-walk-one - write about r2 of module
 <!-- videoground-beta-world -->
