--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -40,8 +40,7 @@ threejs-camera-perspective                         194             8,181
 * (done) edit: threejs-examples : expand thin sections
 * (done) forpost: start at least one r146 demo for friday
 * (done) forpost: new for post folder for threejs-curve-geometry-from
-<!-- edit-->
-* () edit: threejs-examples-weird-walk-one - write about r2 of module
+* (done) edit: threejs-examples-weird-walk-one - write about r2 of module
 <!-- videoground-beta-world -->
 * () new video template for weird-walk-one module
 * () Work more on template 6 for count down videos
