--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -30,7 +30,9 @@ threejs-camera-perspective                         194             8,181
 ### () - SAT 12/17/2022
 
 ### () - FRI 12/16/2022
-* () start post #1018 on threejs-curve-geometry-from
+* (done) start post #1018 on threejs-curve-geometry-from
+<!-- for post -->
+* forpost: threejs-curve-geometry-from - addtional basic exmaple that uses the get point method
 <!-- videoground-blog-posts -->
 * () video1 for threejs-curve-geometry-from
 <!-- videoground-beta-world -->
