--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -31,6 +31,10 @@ threejs-camera-perspective                         194             8,181
 
 ### () - FRI 12/16/2022
 * (done) start post #1018 on threejs-curve-geometry-from
+<!-- edit -->
+* () threejs-curve - link to threejs-curve-geometry-from
+* () threejs-curve-quadratic-bezier-curve3 - link to threejs-curve-geometry-from
+
 <!-- for post -->
 * forpost: threejs-curve-geometry-from - addtional basic exmaple that uses the get point method
 <!-- videoground-blog-posts -->
