--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -28,19 +28,20 @@ threejs-camera-perspective                         194             8,181
 ## () - WEEK 3 - SUN 12/11/2022 - SAT 12/17/2022
 
 ### () - SAT 12/17/2022
+<!-- edit -->
+
+<!-- forpost -->
+
+<!-- edit -->
+
+<!-- videoground-blog-posts -->
 
 ### () - FRI 12/16/2022
 * (done) start post #1018 on threejs-curve-geometry-from
 * (done) threejs-curve - link to threejs-curve-geometry-from
 * (done) threejs-curve-quadratic-bezier-curve3 - link to threejs-curve-geometry-from
 * (done) forpost: threejs-curve-geometry-from - addtional basic exmaple that uses the get point method
-<!-- videoground-blog-posts -->
-* () video1 for threejs-curve-geometry-from
-<!-- videoground-beta-world -->
-* () new video template for weird-walk-one module
-* () Work more on template 6 for count down videos
-<!-- videoground-blog-posts -->
-* () threejs-examples-waves - video2 on r1 of the module
+* (done) video1 for threejs-curve-geometry-from
 
 ### () - THU 12/15/2022
 * (done) edit: threejs-examples : fix header for example that is blank
@@ -48,6 +49,7 @@ threejs-camera-perspective                         194             8,181
 * (done) forpost: start at least one r146 demo for friday
 * (done) forpost: new for post folder for threejs-curve-geometry-from
 * (done) edit: threejs-examples-weird-walk-one - write about r2 of module
+* (done) threejs-examples-waves - video2 on r1 of the module
 
 ### () - WED 12/14/2022
 * (done) forpost: threejs-buffer-geometry-index - update examples to use an array over buffer attribute
