--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -31,7 +31,10 @@ threejs-camera-perspective                         194             8,181
 <!-- edit -->
 
 <!-- forpost -->
-
+* () start the count-down-kit module based on what I have thus far in the beta world module
+* () see about the next revision of canvas mod
+* () lz-string can be used to compress lange amouds of data for images
+     https://github.com/pieroxy/lz-string/blob/master/libs/lz-string.js
 <!-- edit -->
 
 <!-- videoground-blog-posts -->
