--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -2,7 +2,7 @@
 
 THREEJS, VIDEOGROUND-BLOG_POSTS
 
-Start over again by focusing hard on a set top 10 posts on threejs. This time I will be doing so by impressions. Another change that I think I should do is to not take a whole week for a single post, but rather do a day my day thing. 
+Start over again by focusing hard on a set top 10 posts on threejs. This time I will be doing so by impressions, or start to look at other ways to make a list of what posts should be worked on more over others. Another change that I think I should do is to not take a whole week for a single post, but rather do a day by day thing. 
 
 ```
 TOP POSTS BY IMPRESSIONS  12/05/2022 - Last 3 Months
@@ -25,18 +25,29 @@ threejs-camera-perspective                         194             8,181
 <!-------- ----------
 -- WEEK 3
 ---------- --------->
-## () - WEEK 3 - SUN 12/11/2022 - SAT 12/17/2022
+## () - WEEK 3 - SUN 12/18/2022 - SAT 12/24/2022
 
-### () - SAT 12/17/2022
+
+### () - SUN 12/17/2022
 <!-- edit -->
 
 <!-- forpost -->
-* (done) see about the next revision of canvas mod
-* (done) lz-string can be used to compress lange amouds of data for images
-* () start the count-down-kit module based on what I have thus far in the beta world module
+* () count-down.js prototype
+
 <!-- edit -->
 
 <!-- videoground-blog-posts -->
+
+
+<!-------- ----------
+-- WEEK 3
+---------- --------->
+## () - WEEK 3 - SUN 12/11/2022 - SAT 12/17/2022
+
+### () - SAT 12/17/2022
+* (done) see about the next revision of canvas mod
+* (done) lz-string can be used to compress lange amouds of data for images
+* (done) start the count-down.js module based on what I have thus far in the beta world module
 
 ### () - FRI 12/16/2022
 * (done) start post #1018 on threejs-curve-geometry-from
