--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -19,6 +19,32 @@ threejs-vector3                                    223             8,516
 threejs-camera-perspective                         194             8,181
 ```
 
+There is also seeing about working hard on my top 20 threejs-example posts by impressions.
+
+```
+TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
+ 1 threejs-examples-lines-sphere-circles                         96     1,788   <==  12/18
+ 2 threejs-examples-lerp-geo                                     61     1,638   <==  12/19
+ 3 threejs-examples-dae-tools-sphere-normals-invert              54     1,403   <==  12/20
+ 4 threejs-examples-house                                       302     1,298   <==  12/21
+ 5 threejs-examples-position-things-to-sphere-surface            93     1,179   <==  12/...
+ 6 threejs-examples                                              75       797
+ 7 threejs-examples-cube-stack                                   55       680
+ 8 threejs-examples-tree                                        121       636
+ 9 threejs-examples-menus                                        55       532
+10 threejs-examples-waves                                        88       486
+11 threejs-examples-scene-shake                                  41       475
+12 threejs-examples-object-grid-wrap-land                        14       462
+13 threejs-examples-nested-groups                                45       365
+14 threejs-examples-cube-stack-grid                              30       351
+15 threejs-examples-weird-walk-one                               14       299
+16 threejs-examples-dae-tools                                     8       275
+17 threejs-examples-tree-sphere-world                            20       274
+18 threejs-examples-svg-movement                                 13       223
+19 threejs-examples-clock-basic                                  35       207
+20 threejs-examples-hamster-wheel                                17       186
+```
+
 ## YOUTUBE
 * () update youtube github video links from threejs-ambient-light
 
@@ -28,16 +54,11 @@ threejs-camera-perspective                         194             8,181
 ## () - WEEK 3 - SUN 12/18/2022 - SAT 12/24/2022
 
 
-### () - SUN 12/17/2022
-<!-- edit -->
-
+### () - SUN 12/18/2022
+<!-- edit threejs example -->
+* () threejs-examples-lines-sphere-circles
 <!-- forpost -->
 * () count-down.js prototype
-
-<!-- edit -->
-
-<!-- videoground-blog-posts -->
-
 
 <!-------- ----------
 -- WEEK 3
