--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -54,8 +54,8 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ## () - WEEK 3 - SUN 12/18/2022 - SAT 12/24/2022
 
 ### () - MON 12/19/2022
+* (done) threejs-examples-lerp-geo
 <!-- edit threejs -->
-* () threejs-examples-lerp-geo
 <!-- videoground blog posts -->
 * () video2 for threejs-examples-lines-sphere-circles based on the lines rotaiton example \( r1-4 \)
 <!-- forpost -->
