--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -53,9 +53,12 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ---------- --------->
 ## () - WEEK 3 - SUN 12/18/2022 - SAT 12/24/2022
 
+### () - TUE 12/20/2022
+<!-- edit threejs examples -->
+* () - threejs-examples-dae-tools-sphere-normals-invert
+
 ### () - MON 12/19/2022
 * (done) threejs-examples-lerp-geo
-<!-- edit threejs -->
 <!-- videoground blog posts -->
 * () video2 for threejs-examples-lines-sphere-circles based on the lines rotaiton example \( r1-4 \)
 <!-- forpost -->
