--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -54,15 +54,19 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ## () - WEEK 3 - SUN 12/18/2022 - SAT 12/24/2022
 
 ### () - TUE 12/20/2022
+* (done) count-down.js prototype dae example
+
+<!-- for post -->
+* () threejs-examples-count-down: for post folder started with current set of r146 demos
+* () threejs-examples-count-down: canvas texture demo started
+
 <!-- edit threejs examples -->
 * () - threejs-examples-dae-tools-sphere-normals-invert
 
 ### () - MON 12/19/2022
 * (done) threejs-examples-lerp-geo
-<!-- videoground blog posts -->
-* () video2 for threejs-examples-lines-sphere-circles based on the lines rotaiton example \( r1-4 \)
-<!-- forpost -->
-* () count-down.js prototype
+* (done) video2 for threejs-examples-lines-sphere-circles based on the lines rotaiton example \( r1-4 \)
+* (done) count-down.js prototype dae example
 
 ### () - SUN 12/18/2022
 * (done) threejs-examples-lines-sphere-circles
