--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -49,19 +49,26 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 * () update youtube github video links from threejs-ambient-light
 
 <!-------- ----------
--- WEEK 3
+-- WEEK 4
 ---------- --------->
-## () - WEEK 3 - SUN 12/18/2022 - SAT 12/24/2022
+## () - WEEK 4 - SUN 12/18/2022 - SAT 12/24/2022
+
+### () - SAT 12/24/2022
+
+### () - FRI 12/23/2022
+* () start post #1019 on threejs-examples-count-down
+
+### () - THU 12/22/2022
+
+### () - WED 12/21/2022
+<!-- edit threejs examples -->
+* () edit: threejs-examples-dae-tools-sphere-normals-invert - proof read
+* () edit: threejs-examples-house - proof read
 
 ### () - TUE 12/20/2022
 * (done) count-down.js prototype dae example
-
-<!-- for post -->
-* () threejs-examples-count-down: for post folder started with current set of r146 demos
-* () threejs-examples-count-down: canvas texture demo started
-
-<!-- edit threejs examples -->
-* () - threejs-examples-dae-tools-sphere-normals-invert
+* (done) threejs-examples-count-down: for post folder started with current set of r146 demos
+* (done) threejs-examples-count-down: canvas texture demo started
 
 ### () - MON 12/19/2022
 * (done) threejs-examples-lerp-geo
