--- a/todo/today/todo_2022_12.md
+++ b/todo/today/todo_2022_12.md
@@ -61,6 +61,8 @@ TOP EXAMPLE POSTS BY IMPRESSIONS 12/18/2022 - Last 3 Months
 ### () - THU 12/22/2022
 
 ### () - WED 12/21/2022
+* (done) forpost: threejs-examples-count-down - add ground mesh for uvmap canvas example
+
 <!-- edit threejs examples -->
 * () edit: threejs-examples-dae-tools-sphere-normals-invert - proof read
 * () edit: threejs-examples-house - proof read
